Fixed tests after API changes.