@@ -27,10 +27,9 @@ import org.orekit.gnss.metric.messages.rtcm.msm.headers.RtcmMsmSignalId;
 import org.orekit.gnss.metric.parser.ByteArrayEncodedMessage;
 import org.orekit.gnss.metric.parser.EncodedMessage;
 import org.orekit.gnss.metric.parser.RtcmMessagesParser;
+import org.orekit.utils.IERSConventions;
 
 class Rtcm1077Test {
-
-    private double eps = 1.0e-13;
 
     private EncodedMessage message;
 
@@ -80,17 +79,22 @@ class Rtcm1077Test {
 
     @Test
     void testPerfectValue() {
-        final Rtcm1077 rtcm1077 = (Rtcm1077) new RtcmMessagesParser(messages, DataContext.getDefault().getTimeScales())
-                .parse(message, false);
+        final DataContext   context  = DataContext.getDefault();
+        final Rtcm1077 rtcm1077 = (Rtcm1077) new RtcmMessagesParser(messages,
+                                                                    context.getTimeScales(),
+                                                                    context.getFrames().getEME2000(),
+                                                                    context.getFrames().getITRF(IERSConventions.IERS_2010,
+                                                                                                false)).
+                                  parse(message, false);
 
         // Verify header
         Assertions.assertEquals("4095", rtcm1077.getHeader().getReferenceStation());
         Assertions.assertEquals(232660.000, rtcm1077.getHeader().getEpochTime());
-        Assertions.assertEquals(false, rtcm1077.getHeader().getMultipleMessageFlag());
+        Assertions.assertFalse(rtcm1077.getHeader().getMultipleMessageFlag());
         Assertions.assertEquals(0, rtcm1077.getHeader().getIssueofDataStation());
         Assertions.assertEquals(1, rtcm1077.getHeader().getClockSteeringIndicator());
         Assertions.assertEquals(0, rtcm1077.getHeader().getExternalClockIndicator());
-        Assertions.assertEquals(false, rtcm1077.getHeader().getDivergenceFreeSmoothingIndicator());
+        Assertions.assertFalse(rtcm1077.getHeader().getDivergenceFreeSmoothingIndicator());
         Assertions.assertEquals(0, rtcm1077.getHeader().getSmoothingInterval());
         Assertions.assertEquals(0b1100000000000000000000000000000000000000000000000000000000000000L, rtcm1077.getHeader().getSatellitesMask());
         Assertions.assertEquals(0b01000000000000000000000000000000L, rtcm1077.getHeader().getSignalsMask());
@@ -104,20 +108,21 @@ class Rtcm1077Test {
         Assertions.assertEquals(rtcm1077.getHeader().getNumberOfCells(), cells.size());
 
         // Verify first cell sat data
-        Assertions.assertEquals(new SatInSystem("G01"), cells.get(0).getSatelliteData().getSatellite());
-        Assertions.assertEquals(0.068, cells.get(0).getSatelliteData().getIntMillisRoughRange(), eps);
-        Assertions.assertEquals(0, cells.get(0).getSatelliteData().getExtendedSatelliteData());
-        Assertions.assertEquals(6.07421875e-4, cells.get(0).getSatelliteData().getModMillisRoughRange(), eps);
-        Assertions.assertEquals(-137, cells.get(0).getSatelliteData().getRoughPhaserangeRate());
+        Assertions.assertEquals(new SatInSystem("G01"), cells.getFirst().getSatelliteData().getSatellite());
+        final double eps = 1.0e-13;
+        Assertions.assertEquals(0.068, cells.getFirst().getSatelliteData().getIntMillisRoughRange(), eps);
+        Assertions.assertEquals(0, cells.getFirst().getSatelliteData().getExtendedSatelliteData());
+        Assertions.assertEquals(6.07421875e-4, cells.getFirst().getSatelliteData().getModMillisRoughRange(), eps);
+        Assertions.assertEquals(-137, cells.getFirst().getSatelliteData().getRoughPhaserangeRate());
 
         // Verify first cell sig data
-        Assertions.assertEquals(RtcmMsmSignalId.GPS_1C, cells.get(0).getSignalData().getSignalId());
-        Assertions.assertEquals(0.3457, cells.get(0).getSignalData().getFinePhaserangeRate(), eps);
-        Assertions.assertEquals(-2.821143716573715e-7, cells.get(0).getSignalData().getFinePseudorange(), eps);
-        Assertions.assertEquals(-1.4827493578195572e-7, cells.get(0).getSignalData().getFinePhaserange(), eps);
-        Assertions.assertEquals(617, cells.get(0).getSignalData().getLockTimeIndicator());
-        Assertions.assertEquals(47.25, cells.get(0).getSignalData().getCnr(), eps);
-        Assertions.assertEquals(false, cells.get(0).getSignalData().getHalfCycleAmbiguityIndicator());
+        Assertions.assertEquals(RtcmMsmSignalId.GPS_1C, cells.getFirst().getSignalData().getSignalId());
+        Assertions.assertEquals(0.3457, cells.getFirst().getSignalData().getFinePhaserangeRate(), eps);
+        Assertions.assertEquals(-2.821143716573715e-7, cells.getFirst().getSignalData().getFinePseudorange(), eps);
+        Assertions.assertEquals(-1.4827493578195572e-7, cells.getFirst().getSignalData().getFinePhaserange(), eps);
+        Assertions.assertEquals(617, cells.getFirst().getSignalData().getLockTimeIndicator());
+        Assertions.assertEquals(47.25, cells.getFirst().getSignalData().getCnr(), eps);
+        Assertions.assertEquals(false, cells.getFirst().getSignalData().getHalfCycleAmbiguityIndicator());
     }
 
     private byte[] byteArrayFromBinary(String radix2Value) {
