@@ -28,10 +28,9 @@ import org.orekit.gnss.metric.messages.rtcm.msm.headers.RtcmMsmSignalId;
 import org.orekit.gnss.metric.parser.ByteArrayEncodedMessage;
 import org.orekit.gnss.metric.parser.EncodedMessage;
 import org.orekit.gnss.metric.parser.RtcmMessagesParser;
+import org.orekit.utils.IERSConventions;
 
 class Rtcm1107Test {
-
-    private double eps = 1.0e-13;
 
     private EncodedMessage message;
 
@@ -83,8 +82,13 @@ class Rtcm1107Test {
 
     @Test
     void testPerfectValue() {
-        final Rtcm1107 rtcm1107 = (Rtcm1107) new RtcmMessagesParser(messages, DataContext.getDefault().getTimeScales())
-                .parse(message, false);
+        final DataContext   context  = DataContext.getDefault();
+        final Rtcm1107 rtcm1107 = (Rtcm1107) new RtcmMessagesParser(messages,
+                                                                    context.getTimeScales(),
+                                                                    context.getFrames().getEME2000(),
+                                                                    context.getFrames().getITRF(IERSConventions.IERS_2010,
+                                                                                                false)).
+                                       parse(message, false);
 
         // Verify header
         Assertions.assertEquals("92", rtcm1107.getHeader().getReferenceStation());
@@ -108,20 +112,21 @@ class Rtcm1107Test {
         Assertions.assertEquals(rtcm1107.getHeader().getNumberOfCells(), cells.size());
 
         // Verify first cell sat data
-        Assertions.assertEquals(new SatInSystem("S23"), cells.get(0).getSatelliteData().getSatellite());
-        Assertions.assertEquals(0.127, cells.get(0).getSatelliteData().getIntMillisRoughRange(), eps);
-        Assertions.assertEquals(0, cells.get(0).getSatelliteData().getExtendedSatelliteData());
-        Assertions.assertEquals(3.22265625e-4, cells.get(0).getSatelliteData().getModMillisRoughRange(), eps);
-        Assertions.assertEquals(66, cells.get(0).getSatelliteData().getRoughPhaserangeRate());
+        Assertions.assertEquals(new SatInSystem("S23"), cells.getFirst().getSatelliteData().getSatellite());
+        final double eps = 1.0e-13;
+        Assertions.assertEquals(0.127, cells.getFirst().getSatelliteData().getIntMillisRoughRange(), eps);
+        Assertions.assertEquals(0, cells.getFirst().getSatelliteData().getExtendedSatelliteData());
+        Assertions.assertEquals(3.22265625e-4, cells.getFirst().getSatelliteData().getModMillisRoughRange(), eps);
+        Assertions.assertEquals(66, cells.getFirst().getSatelliteData().getRoughPhaserangeRate());
 
         // Verify first cell sig data
-        Assertions.assertEquals(RtcmMsmSignalId.SBAS_1C, cells.get(0).getSignalData().getSignalId());
-        Assertions.assertEquals(-0.4573, cells.get(0).getSignalData().getFinePhaserangeRate(), eps);
-        Assertions.assertEquals(5.538016557693481e-7, cells.get(0).getSignalData().getFinePseudorange(), eps);
-        Assertions.assertEquals(5.874852649867535e-7, cells.get(0).getSignalData().getFinePhaserange(), eps);
-        Assertions.assertEquals(417, cells.get(0).getSignalData().getLockTimeIndicator());
-        Assertions.assertEquals(41.0, cells.get(0).getSignalData().getCnr(), eps);
-        Assertions.assertEquals(false, cells.get(0).getSignalData().getHalfCycleAmbiguityIndicator());
+        Assertions.assertEquals(RtcmMsmSignalId.SBAS_1C, cells.getFirst().getSignalData().getSignalId());
+        Assertions.assertEquals(-0.4573, cells.getFirst().getSignalData().getFinePhaserangeRate(), eps);
+        Assertions.assertEquals(5.538016557693481e-7, cells.getFirst().getSignalData().getFinePseudorange(), eps);
+        Assertions.assertEquals(5.874852649867535e-7, cells.getFirst().getSignalData().getFinePhaserange(), eps);
+        Assertions.assertEquals(417, cells.getFirst().getSignalData().getLockTimeIndicator());
+        Assertions.assertEquals(41.0, cells.getFirst().getSignalData().getCnr(), eps);
+        Assertions.assertEquals(false, cells.getFirst().getSignalData().getHalfCycleAmbiguityIndicator());
 
         // Verify last cell sat data
         Assertions.assertEquals(new SatInSystem("S27"), cells.get(3).getSatelliteData().getSatellite());
